CPlusPlus: Allow empty initializer lists in placement new

Fixes: QTCREATORBUG-30798
Change-Id: Ib9945e4e721aca5f88665bd8a289ae3c54c69e65
Reviewed-by: Christian Stenger <christian.stenger@qt.io>